assets/styles/styles.css
/* ... */
/* slider - swiper */
.slider{
    max-width:1186px;
    height:260px;
    margin:0 auto;
    position: relative;
    overflow: hidden;
    border-radius: 10px;
}
.slide-area{
    height: 100%;
}
.slide-area div{
    width:100%;
    height: 100%;
    position: absolute;
    transition: all 1s;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
}
.slider span{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    height: 50px;
    max-width: 345px;
    position: absolute;
    top:50%;
    color:#fff;
    line-height: 30px;
    text-align: center;
    font-family: Myriad;
}
.title{
    top:50% !important;
    font-size: 24px;
    text-align: center;
    cursor: auto !important;
    margin-top: -80px !important;
    left: 35%;
}
.slide-area{
    font-size: 24px;
    text-align: center;
    justify-content: center;
    text-transform: uppercase;
    color: #fff;
}
#prev{
    left: 35px;
    top: 40%;
    border-radius: 0 10px 10px 0;
    background-color: #33332f52;
}
#next{
    right: 35px;
    top: 40%;
    border-radius: 10px 0 0 10px;
    background-color: #33332f52;
}
#prev svg,#next svg{
    width:100%;
    fill: #fff;
}
#next svg {
    transform: rotate(-180deg);
}
#prev:hover,
#next:hover{
    background-color: rgba(219, 213, 213, 0.8);
}
.button-purchase span{
    position: absolute;
    /* margin: 35px 0 0 -50px; */
    left: 43%;
    top: 65%;
    z-index: 99;
    height: 42px;
    width: 176px;
    background-color: #FFFFFF;
    color: rgba(0, 0, 0, 0.8);
    text-align: center;
    cursor: pointer;
    font-family: FiraGo;
    padding-top: 8px;
}
.button-purchase span:hover{
    background-color: rgba(59, 179, 89, 0.733);
}
.purchase {
    position: relative;
    background-color: #CAC7C7FF;
    color: rgba(0, 0, 0, 0.8) !important;
    left: 50%;
    cursor: pointer;
    display: block;
    bottom: 25px;
}
.dots {
    position: absolute;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    left: 46.5%;
    z-index: 99;
    text-align: center;
    justify-content: center;
}
.dots span {
    position: relative;
    width: 15px;
    height: 10px;
    background-color: #CAC7C7FF;
    margin: 0 5px;
    cursor: pointer;
    bottom: 25px;
}
.dots span.active {
    background-color: rgb(247, 213, 213);
}

/* promotion section */
.block-3 {
    max-width: 1280px;
    width: 100%;
    display: flex;
    margin-top: 70px;
    font-family: 'Myraid';
    cursor: pointer;
}
.promotion1 {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #F1F7E9;
    width: 278px;
    height: 91px;
    margin: 0 25px 0 0;
    border-radius: 10px;
}
.promotion2 {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #FEEFE8;
    width: 278px;
    height: 91px;
    margin: 0 25px 0 0;
    border-radius: 10px;
}
.promotion3 {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #EBF7FC;
    width: 278px;
    height: 91px;
    margin: 0 25px 0 0;
    border-radius: 10px;
}
.promotion4 {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #FAF4FA;
    width: 278px;
    height: 91px;
    margin: 0 25px 0 0;
    border-radius: 10px;
}
.promo-icon1 {
    padding: 10px;
}
.promo-icon2 {
    padding: 10px;
}
.promo-icon3 {
    padding: 10px;
}
.promo-icon4 {
    padding: 10px;
}
.promotion1:hover{
    color: #b8e280;
    box-shadow: 10px 10px #F1F7E9;
}
.promotion2:hover{
    color: #f0b9a0;
    box-shadow: 10px 10px #FEEFE8;
}
.promotion3:hover{
    color: #90cfeb;
    box-shadow: 10px 10px #EBF7FC;
}
.promotion4:hover{
    color: #e997e9;
    box-shadow: 10px 10px #FAF4FA;
}

/* promotion part 2 */
.block-4 {
    max-width: 1200px;
    width: 100%;
}
.grid-container {
    display: grid;
    margin-top: 70px;
    grid-column-gap: 25px;
    grid-template: "item1 item2 item3" 
                   "item1  item4 item4" 
}
.item1 {
    position: relative;
    grid-area: item1;
    max-width: 378px;
}
.item1info {
    display: flex;
    flex-wrap: wrap;
    top: 50%;
}
.info1 {
    position: absolute;
    top: 70px;
    left: 40px;
    font-family: 'Myraid';
    font-size: 14px;
    color: white;
}
.info2 {
    position: absolute;
    top: 109px;
    left: 40px;
    font-family: 'Myraid';
    font-size: 24px;
    color: white;
}
.info3 {
    position: absolute;
    top: 138px;
    left: 40px;
    font-family: 'Myraid';
    font-size: 18px;
    color: white;
}
.infobutton4 {
    position: absolute;
    top: 192px;
    left: 40px;
    background-color: #FFFFFF;
    color: #111111;
    font-family: 'Myraid';
    width: 161px;
    height: 42px;
    border-radius: 6px;
    cursor: pointer;
    border-style: none;
}
.item2 {
    position: relative;
    grid-area: item2;
}
.item2 img {
    border-radius: 10px;
}
.info5 {
    position: absolute;
    top: 48px;
    left: 60px;
    font-family: 'Myraid';
    font-size: 24px;
    color: white;
}
.info6 {    
    position: absolute;
    top: 80px;
    left: 60px;
    font-family: 'Myraid';
    font-size: 18px;
    color: white;
}
.info7 {
    position: absolute;
    top: 138px;
    left: 155px;
    background-color: #FFFFFF;
    color: #111111;
    font-family: 'Myraid';
    width: 161px;
    height: 42px;
    border-radius: 6px;
    cursor: pointer;
    border-style: none;
}
.item3 {
    position: relative;
    background-color: #75b528;;
    background-image: url(/assets/images/bird.png);
    background-position: 98% 85%;
    background-repeat: no-repeat;
    grid-area: item3;
    width: 367px;
    height: 189px;
    border-radius: 10px;
}
.info8 {
    position: absolute;
    top: 78px;
    left: 60px;
    font-family: 'Myraid';
    font-size: 24px;
    color: white;
}
.info9 {
    position: absolute;
    top: 43px;
    left: 60px;
    font-family: 'Myraid';
    font-size: 18px;
    color: white;
}
/* ... */

